fix z-index

--- a/app/assets/stylesheets/common/display.scss
+++ b/app/assets/stylesheets/common/display.scss
@@ -124,6 +124,10 @@
   z-index: 1050 !important;
 }
 
+.z2060 {
+  z-index: 2060 !important;
+}
+
 .z-index-fix {
   -webkit-transform:translateZ(1px);
   -moz-transform:translateZ(1px);
